# wurfelspiel

./: .gitignore  LICENSE  NOTICE  README.md  generate_wurfelspiel.py  pyproject.toml
.github/workflows/: test.yml
data/: wurfelspiel.json
scripts/: check_prerequisites.sh  render_lilypond.sh  render_wav.sh
tests/: __init__.py  test_generator.py
